--- a/html/shop.html
+++ b/html/shop.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/shop.css" />
   </head>
   <body>
-   <!----------------- HEADER ------------------------>
+    <!----------------- HEADER ------------------------>
     <header class="navigation">
       <div class="navigation-top">
         <div class="container container-flex top">
@@ -213,84 +213,109 @@
     </header>
     <!---------------- end/HEADER --------------------->
 
-     <main>
-        <section class="exclusive-deals">
+    <main>
+      <section class="exclusive-deals">
         <div class="container">
-            <div class="bradcrumbs">
-              <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
-              <span>&#10095;</span>
-              <a href="./shop.html" class="bradcrumbs__link">Shop</a>
-            </div>
+          <div class="bradcrumbs">
+            <a href="./home.html" class="bradcrumbs__link"
+              >Vital-J Empowering</a
+            >
+            <span>&#10095;</span>
+            <a href="./shop.html" class="bradcrumbs__link">Shop</a>
+          </div>
 
           <h2 class="exclusive-deals-title">Shop</h2>
-         
+
           <ul class="card-wrapper">
             <li class="card-container active">
               <div class="card-container__box">
                 <img class="card-img" src="../img/tube.png" alt="tube" />
               </div>
-              <a href="../html/shop-category.html" class="card-container__link">Category 1</a>
+              <a href="../html/shop-category.html" class="card-container__link"
+                >Category 1</a
+              >
             </li>
 
             <li class="card-container">
               <div class="card-container__box">
                 <img class="card-img" src="../img/tube.png" alt="tube" />
               </div>
-              <a href="../html/shop-category.html" class="card-container__link">Category 2</a>          
+              <a href="../html/shop-category.html" class="card-container__link"
+                >Category 2</a
+              >
             </li>
 
             <li class="card-container active last">
               <div class="card-container__box">
                 <img class="card-img" src="../img/tube.png" alt="tube" />
               </div>
-              <a href="../html/shop-category.html" class="card-container__link">Category 3</a>
+              <a href="../html/shop-category.html" class="card-container__link"
+                >Category 3</a
+              >
             </li>
           </ul>
         </div>
       </section>
+    </main>
 
-
+    <!----------------- FOOTER ------------------------>
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
         <a class="footer-logo-link" href="./home.html">
-          <svg class="logo footer" width="77px" height="47px">
+          <svg class="logo footer">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
         </a>
 
         <div class="footer-wrapper">
           <ul class="list footer-list">
-            <li class="list-item"><a class="footer-link" href="#">Home</a></li>
+            <li class="list-item">
+              <a class="footer-link" href="./home.html">Home</a>
+            </li>
             <li class="list-item">
               <a class="footer-link" href="#">About us</a>
             </li>
             <li class="list-item">
-              <a class="footer-link" href="#">Contact us</a>
+              <a class="footer-link" href="./contact.html">Contact us</a>
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a class="footer-link" href="./privacy-policy.html">Privacy policy</a>
+              <a class="footer-link" href="./privacy-policy.html"
+                >Privacy policy</a
+              >
             </li>
           </ul>
           <div class="social-networks">
             <h4 class="footer-link">Get in touch</h4>
             <ul class="list footer-list-networks">
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="facebook social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="twiter social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-tweeter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="instagram social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-instagram"></use>
                   </svg>
@@ -302,7 +327,7 @@
         <div class="list-social-wrapper">
           <ul class="list list-social">
             <li class="list-social-item">
-              <a href="#"></a>
+              <a href="#">
                 <svg
                   width="39"
                   height="30"
@@ -677,6 +702,7 @@
         </div>
       </div>
     </footer>
+    <!----------------- end/FOOTER -------------------->
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
     <script src="../js/click-category.js"></script>
